--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password=password
 # Hibernate properties
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # create, create-drop
-spring.jpa.hibernate.ddl-auto=up
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.data=classpath:data.sql
 
